--- a/portfolio/work.html
+++ b/portfolio/work.html
@@ -3,15 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>&lt;AlliedWork/&gt; - Advanced LEGO SPIKE Editor</title>
+  <title>AlliedWork - Advanced LEGO SPIKE Editor</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap');
     body { font-family: 'Inter', sans-serif; background: linear-gradient(135deg, #0f2027, #203a43, #2c5364); overflow-x:hidden; }
+
     .glass { @apply bg-white/5 backdrop-blur-md rounded-2xl border border-white/10; }
-    .glow-button { @apply text-white px-6 py-3 rounded-xl font-semibold; background: linear-gradient(45deg,#6d00ff,#00ffe7); box-shadow: 0 0 15px rgba(109,0,255,0.5),0 0 30px rgba(0,255,231,0.3); transition:0.3s;}
-    .glow-button:hover { box-shadow:0 0 25px rgba(109,0,255,0.7),0 0 50px rgba(0,255,231,0.5); transform: translateY(-2px); }
-    .editor { @apply min-h-[300px] rounded-xl p-4 font-mono overflow-auto bg-black/50 text-white; }
+
+    /* Buttons */
+    .glow-button {
+      @apply text-white px-6 py-3 rounded-xl font-semibold uppercase tracking-wide relative overflow-hidden;
+      background: linear-gradient(90deg, #6d00ff, #00ffe7);
+      box-shadow: 0 0 20px rgba(109,0,255,0.5), 0 0 40px rgba(0,255,231,0.3);
+      transition: all 0.3s ease;
+    }
+    .glow-button:hover {
+      box-shadow: 0 0 35px rgba(109,0,255,0.7), 0 0 70px rgba(0,255,231,0.5);
+      transform: translateY(-2px);
+    }
 
     /* Typing animation */
     .typing-text {
@@ -20,20 +30,11 @@
       overflow: hidden;
       animation: typing 3s steps(50, end) forwards, blink 0.7s step-end infinite alternate;
     }
-    @keyframes typing {
-      from { width: 0; }
-      to { width: 100%; }
-    }
-    @keyframes blink {
-      from, to { border-color: transparent; }
-      50% { border-color: #00ffe7; }
-    }
+    @keyframes typing { from { width: 0; } to { width: 100%; } }
+    @keyframes blink { from, to { border-color: transparent; } 50% { border-color: #00ffe7; } }
 
-    /* Navbar neon hover effect */
-    .nav-link {
-      position: relative;
-      transition: 0.3s;
-    }
+    /* Navbar hover underline */
+    .nav-link { position: relative; transition: 0.3s; }
     .nav-link::after {
       content: '';
       position: absolute;
@@ -44,9 +45,7 @@
       background: #00ffe7;
       transition: width 0.3s;
     }
-    .nav-link:hover::after {
-      width: 100%;
-    }
+    .nav-link:hover::after { width: 100%; }
 
     /* Mobile menu */
     #menu-toggle:checked + #menu { display: block; }
@@ -54,14 +53,14 @@
 </head>
 <body class="text-white">
 
-  <!-- Futuristic Navbar -->
+  <!-- Navbar -->
   <header class="glass fixed w-full z-50 top-0 left-0 px-8 py-4 flex justify-between items-center backdrop-blur-md shadow-lg">
-    <h1 class="text-3xl font-extrabold tracking-wide">&lt;AlliedWork/&gt;</h1>
-    
-    <!-- Desktop nav -->
+    <h1 class="text-3xl font-extrabold tracking-wide">AlliedWork</h1>
     <nav class="hidden md:flex space-x-8">
       <a href="#features" class="nav-link text-white hover:text-cyan-400 transition">Features</a>
-      <a href="#demo" class="nav-link text-white hover:text-cyan-400 transition">Live Demo</a>
+      <a href="#benefits" class="nav-link text-white hover:text-cyan-400 transition">Benefits</a>
+      <a href="#usability" class="nav-link text-white hover:text-cyan-400 transition">Usability</a>
+      <a href="#commands" class="nav-link text-white hover:text-cyan-400 transition">Commands</a>
       <a href="#contact" class="nav-link text-white hover:text-cyan-400 transition">Contact</a>
     </nav>
 
@@ -73,64 +72,128 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8h16M4 16h16"/>
         </svg>
       </label>
-      <!-- Mobile menu -->
       <div id="menu" class="hidden absolute right-8 top-16 w-48 glass p-4 flex flex-col space-y-4">
         <a href="#features" class="nav-link text-white hover:text-cyan-400">Features</a>
-        <a href="#demo" class="nav-link text-white hover:text-cyan-400">Live Demo</a>
+        <a href="#benefits" class="nav-link text-white hover:text-cyan-400">Benefits</a>
+        <a href="#usability" class="nav-link text-white hover:text-cyan-400">Usability</a>
+        <a href="#commands" class="nav-link text-white hover:text-cyan-400">Commands</a>
         <a href="#contact" class="nav-link text-white hover:text-cyan-400">Contact</a>
       </div>
     </div>
   </header>
 
-  <!-- Hero Section -->
+  <!-- Hero -->
   <section class="flex flex-col justify-center items-center text-center py-36 px-4 relative z-10 mt-20">
-    <h2 class="text-5xl md:text-6xl font-extrabold mb-6 typing-text">&lt;AlliedWork/&gt; – Advanced LEGO SPIKE Editor</h2>
-    <p class="text-xl mb-8 text-gray-300">The futuristic editor to code LEGO SPIKE Hub robots. Write, test, and visualize your programs with style.</p>
-    <a href="#demo" class="glow-button">Try AlliedWork Now</a>
+    <h2 class="text-5xl md:text-6xl font-extrabold mb-6 typing-text">AlliedWork – Advanced LEGO SPIKE Editor</h2>
+    <p class="text-xl mb-8 text-gray-300">The futuristic editor designed to code LEGO SPIKE Hub robots. Write, test, and visualize your programs with precision and speed.</p>
   </section>
 
-  <!-- Features Section -->
-  <section id="features" class="max-w-7xl mx-auto px-4 py-20 grid md:grid-cols-3 gap-8">
-    <div class="glass p-6 hover:scale-105 transform transition duration-300 shadow-lg">
-      <h4 class="text-2xl font-semibold mb-2 text-cyan-400">Real-Time Visualization</h4>
-      <p>See your LEGO SPIKE Hub robot’s movements on a virtual mat in real-time as you code.</p>
-    </div>
-    <div class="glass p-6 hover:scale-105 transform transition duration-300 shadow-lg">
-      <h4 class="text-2xl font-semibold mb-2 text-pink-400">Multi-File Projects</h4>
-      <p>Create, organize, and edit multiple program files seamlessly within AlliedWork.</p>
-    </div>
-    <div class="glass p-6 hover:scale-105 transform transition duration-300 shadow-lg">
-      <h4 class="text-2xl font-semibold mb-2 text-purple-400">Robot Control Commands</h4>
-      <p>Use advanced LEGO SPIKE Hub commands like drive, turn, wait, arm control, and more directly in the editor.</p>
+  <!-- Features -->
+  <section id="features" class="max-w-7xl mx-auto px-4 py-20">
+    <h3 class="text-4xl font-bold text-center mb-12 text-cyan-300">Key Features</h3>
+    <div class="grid md:grid-cols-3 gap-8">
+      <div class="glass p-6 shadow-lg hover:scale-105 transform transition duration-300">
+        <h4 class="text-2xl font-semibold text-cyan-400 mb-2">Real-Time Visualization</h4>
+        <p>Watch your LEGO SPIKE Hub robot’s movements live on a virtual mat as you code. Instantly see how your commands affect the robot's path.</p>
+      </div>
+      <div class="glass p-6 shadow-lg hover:scale-105 transform transition duration-300">
+        <h4 class="text-2xl font-semibold text-pink-400 mb-2">Multi-File Projects</h4>
+        <p>Create, organize, and manage multiple files within the editor. Split complex programs into modules for better readability.</p>
+      </div>
+      <div class="glass p-6 shadow-lg hover:scale-105 transform transition duration-300">
+        <h4 class="text-2xl font-semibold text-purple-400 mb-2">Robot Control Commands</h4>
+        <p>Access advanced SPIKE Hub commands like drive, turn, arm control, wait, and sensors integration. Build precise robot behaviors easily.</p>
+      </div>
     </div>
   </section>
 
-  <!-- Live Demo Section -->
-  <section id="demo" class="max-w-5xl mx-auto px-4 py-20">
-    <h3 class="text-4xl font-bold text-center mb-6 text-cyan-300">Live Demo</h3>
-    <div class="editor glass" contenteditable="true">
-// Example: Move SPIKE Hub forward
-drive(10);
-turn(90);
-arm_speed(50);
-wait(2);
-    </div>
-    <p class="text-center mt-4 text-gray-400">Editable area with futuristic glassmorphic style. Try coding your robot commands!</p>
+  <!-- Benefits -->
+  <section id="benefits" class="max-w-7xl mx-auto px-4 py-20 bg-black/20 glass rounded-2xl">
+    <h3 class="text-4xl font-bold text-center mb-12 text-cyan-300">Benefits of Using AlliedWork</h3>
+    <ul class="space-y-6 text-lg text-gray-200">
+      <li class="transition transform hover:scale-105 hover:text-cyan-400 hover:shadow-lg hover:shadow-cyan-500/50 p-6 rounded-lg cursor-pointer">
+        ✅ <strong>Speeds up coding and testing:</strong> Write and test programs faster with real-time feedback, reducing trial-and-error time and allowing teams to iterate quickly.
+      </li>
+      <li class="transition transform hover:scale-105 hover:text-cyan-400 hover:shadow-lg hover:shadow-cyan-500/50 p-6 rounded-lg cursor-pointer">
+        ✅ <strong>Reduces trial-and-error:</strong> The visualizer shows exactly how the robot moves on the mat, preventing common mistakes and making learning more intuitive.
+      </li>
+      <li class="transition transform hover:scale-105 hover:text-cyan-400 hover:shadow-lg hover:shadow-cyan-500/50 p-6 rounded-lg cursor-pointer">
+        ✅ <strong>Organizes projects efficiently:</strong> Multi-file support allows you to separate code into modules, making complex projects more manageable and easier to maintain.
+      </li>
+      <li class="transition transform hover:scale-105 hover:text-cyan-400 hover:shadow-lg hover:shadow-cyan-500/50 p-6 rounded-lg cursor-pointer">
+        ✅ <strong>Supports advanced commands:</strong> Utilize built-in robot commands for precise movements, sensor readings, and arm control, enabling sophisticated programming strategies.
+      </li>
+      <li class="transition transform hover:scale-105 hover:text-cyan-400 hover:shadow-lg hover:shadow-cyan-500/50 p-6 rounded-lg cursor-pointer">
+        ✅ <strong>Improves learning and logic:</strong> By visualizing the robot and seeing code results instantly, users strengthen programming logic and problem-solving skills.
+      </li>
+      <li class="transition transform hover:scale-105 hover:text-cyan-400 hover:shadow-lg hover:shadow-cyan-500/50 p-6 rounded-lg cursor-pointer">
+        ✅ <strong>Futuristic, engaging interface:</strong> The sleek design encourages focus and creativity, making coding enjoyable and motivating for students and teams.
+      </li>
+    </ul>
   </section>
 
-  <!-- Contact Section -->
+  <!-- Usability -->
+  <section id="usability" class="max-w-7xl mx-auto px-4 py-20">
+    <h3 class="text-4xl font-bold text-center mb-12 text-cyan-300">Usability</h3>
+    <div class="grid md:grid-cols-2 gap-8">
+      <div class="glass p-6 shadow-lg hover:scale-105 transform transition duration-300">
+        <h4 class="text-2xl font-semibold text-yellow-400 mb-2">Beginner Friendly</h4>
+        <p>Even new users can start coding LEGO SPIKE robots easily. Clear command structure and visual feedback help beginners understand programming flow.</p>
+      </div>
+      <div class="glass p-6 shadow-lg hover:scale-105 transform transition duration-300">
+        <h4 class="text-2xl font-semibold text-green-400 mb-2">Advanced Capabilities</h4>
+        <p>Advanced users can write complex programs using multiple files, sensors, and robot commands. Perfect for FLL teams and competitive programming.</p>
+      </div>
+      <div class="glass p-6 shadow-lg hover:scale-105 transform transition duration-300">
+        <h4 class="text-2xl font-semibold text-pink-400 mb-2">Cross-Platform</h4>
+        <p>AlliedWork works on modern browsers and devices without installation. Start coding instantly on PC, tablet, or Chromebook.</p>
+      </div>
+      <div class="glass p-6 shadow-lg hover:scale-105 transform transition duration-300">
+        <h4 class="text-2xl font-semibold text-indigo-400 mb-2">Collaborative Projects</h4>
+        <p>Teams can share code snippets and project files easily, streamlining collaboration and team-based programming challenges.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Commands -->
+  <section id="commands" class="max-w-7xl mx-auto px-4 py-20">
+    <h3 class="text-4xl font-bold text-center mb-12 text-cyan-300">Robot Commands</h3>
+    <div class="grid md:grid-cols-2 gap-8">
+      <div class="glass p-6 shadow-lg hover:scale-105 transform transition duration-300">
+        <h4 class="text-2xl font-semibold text-cyan-400 mb-2">drive</h4>
+        <p>Moves the robot forward or backward by a set distance (in inches).</p>
+        <pre class="bg-black/50 text-white p-3 rounded mt-2">drive(24)</pre>
+      </div>
+      <div class="glass p-6 shadow-lg hover:scale-105 transform transition duration-300">
+        <h4 class="text-2xl font-semibold text-pink-400 mb-2">turn</h4>
+        <p>Rotates the robot by a given angle in degrees.</p>
+        <pre class="bg-black/50 text-white p-3 rounded mt-2">turn(90)</pre>
+      </div>
+      <div class="glass p-6 shadow-lg hover:scale-105 transform transition duration-300">
+        <h4 class="text-2xl font-semibold text-purple-400 mb-2">speed</h4>
+        <p>Sets the robot’s movement speed (0–100).</p>
+        <pre class="bg-black/50 text-white p-3 rounded mt-2">speed(80)</pre>
+      </div>
+      <div class="glass p-6 shadow-lg hover:scale-105 transform transition duration-300">
+        <h4 class="text-2xl font-semibold text-yellow-400 mb-2">wait</h4>
+        <p>Pauses movement for a specified number of seconds.</p>
+        <pre class="bg-black/50 text-white p-3 rounded mt-2">wait(2)</pre>
+      </div>
+      <div class="glass p-6 shadow-lg hover:scale-105 transform transition duration-300">
+        <h4 class="text-2xl font-semibold text-green-400 mb-2">arm_speed</h4>
+        <p>Controls the speed of the robot’s arm motor.</p>
+        <pre class="bg-black/50 text-white p-3 rounded mt-2">arm_speed(60)</pre>
+      </div>
+      <div class="glass p-6 shadow-lg hover:scale-105 transform transition duration-300">
+        <h4 class="text-2xl font-semibold text-indigo-400 mb-2">arm</h4>
+        <p>Moves the arm up or down by a specific degree value.</p>
+        <pre class="bg-black/50 text-white p-3 rounded mt-2">arm(-45)</pre>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
   <section id="contact" class="py-20 text-center relative z-10">
-    <div class="max-w-3xl mx-auto glass p-10 shadow-lg">
-      <h3 class="text-4xl font-bold mb-4 text-cyan-400">Get in Touch</h3>
-      <p class="mb-6">Questions, feedback, or collaborations? Reach out to Sid AG directly.</p>
-      <a href="mailto:sid@example.com" class="glow-button">Email Sid AG</a>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="text-gray-300 py-6 text-center">
-    &copy; 2025 &lt;AlliedWork/&gt;. All rights reserved.
-  </footer>
-
-</body>
-</html>
+    <div class="max-w-3xl mx-auto glass p-16 shadow-lg bg-white/10">
+      <h3 class="text-4xl font-bold mb-6 text-cyan-400">Contact Sid AG</h3>
+      <p class="mb-6 text-gray-200 text-lg">Have questions, feedback, or want to collaborate? Reach out directly via email and get a response quickly. Sid AG is
