--- a/re/agsid.html
+++ b/re/agsid.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div class="spinner"></div>
-    <p>Redirecting to <a href="https://github.com/agsid"></a>...</p>
+    <p>Redirecting to <a href="https://github.com/agsid">https://github.com/agsid</a>...</p>
 </body>
 </html>
