--- a/website/about-us/index.html
+++ b/website/about-us/index.html
@@ -36,16 +36,6 @@
             background-color: #00BFFF;
         }
 
-    body {
-        /* Updated background image for a starry, less tinted look */
-        background-image: url('./images/bgabtus (1).jpg');
-        background-size: cover;
-        background-attachment: fixed;
-        background-position: center;
-    }
-
-    /*---*/
-
     .member-card {
         /* Adjusted background for better contrast and a modern feel */
         background-color: rgba(10, 10, 20, 0.7);
@@ -135,7 +125,7 @@
     }
 </style>
 </head>
-<body class="text-white font-sans">
+<body class="text-white font-sans bg-gradient-to-br from-gray-900 via-gray-800 to-gray-900 min-h-screen flex flex-col ">
     <div id="includedContent"></div>
     <main class="container mx-auto min-h-screen flex items-center justify-center">
         <div id="members-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 ">
