--- a/website/work/index.html
+++ b/website/work/index.html
@@ -36,7 +36,7 @@
     <img src="../images/logo.png" alt="logo" class="w-7 h-7 rounded-full shadow-md">
     <span class="font-semibold text-blue-400 text-lg tracking-wide">AlliedWork</span>
   </div>
-  <div class="text-gray-400 text-xs italic">AI-Powered FLL Code Editor</div>
+  <div class="text-gray-400 text-xs italic">FLL Code Editor</div>
 </div>
 
 <div class="flex flex-1 overflow-hidden">
