--- a/website/aac/index.html
+++ b/website/aac/index.html
@@ -52,7 +52,7 @@
     </p>
 
     <!-- Download Button -->
-    <a href="AutoCorrection.llsp3" download="AutoCorrection.llsp3"
+    <a href="./AutoCorrection.llsp3" download="AutoCorrection.llsp3"
        class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold text-lg px-6 py-3 rounded-lg shadow-md transition-all duration-200">
       ⬇️ Download AutoCorrection.llsp3
     </a>
