--- a/portfolio/v2index.html
+++ b/portfolio/v2index.html
@@ -36,8 +36,8 @@
                 <!-- Search Input with ID for JavaScript functionality -->
                 <input type="text" id="search-input" placeholder="Search documentation..." class="hidden sm:block w-64 px-3 py-1.5 text-sm border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-150 ease-in-out">
                 <!-- Updated button/link to redirect to the project website -->
-                <a href="https://agsid.github.io/website/" target="_blank" class="px-3 py-1.5 text-sm font-semibold text-white bg-blue-600 rounded-lg hover:bg-blue-700 transition duration-150 ease-in-out shadow-md">
-                    View Project Website
+                <a href="../website/home/index.html" target="_blank" class="px-3 py-1.5 text-sm font-semibold text-white bg-blue-600 rounded-lg hover:bg-blue-700 transition duration-150 ease-in-out shadow-md">
+                    Main Website
                 </a>
             </div>
         </div>
