--- a/website/missions/index.html
+++ b/website/missions/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <script src="missions.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Missions</title>
@@ -11,12 +10,29 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Oswald:wght@400;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="missions.css" rel="stylesheet">
+</head>
 
+<body>  
+    <div id="includedContent" class="header-bg"></div>
 
+    <main class="container mx-auto px-4 py-12">
+        <section class="text-center mb-10">
+            <h1 class="text-4xl font-extrabold text-white mb-4">FIRST LEGO League Unearthed Missions</h1>
+            <p class="text-lg text-gray-300">Explore the challenges and accomplishments of the Unearthed season!</p>
+        </section>
+        
+        <div id="missions-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <!-- Mission cards will be dynamically inserted here -->
+        </div>
+    </main>
+
+    <div id="Content" class="footer-bg"></div>
+
+    <!-- Move the script tag to the bottom of the body -->
+    <script src="missions.js"></script>
     <script>
         async function loadHTML(elementId, filePath) {
             try {
@@ -37,23 +53,6 @@
             loadHTML('Content', '../layout/footer.html');
         });
     </script>
-</head>
-
-<body>
-    <div id="includedContent" class="header-bg"></div>
-
-    <main class="container mx-auto px-4 py-12">
-        <section class="text-center mb-10">
-            <h1 class="text-4xl font-extrabold text-white mb-4">FIRST LEGO League Unearthed Missions</h1>
-            <p class="text-lg text-gray-300">Explore the challenges and accomplishments of the Unearthed season!</p>
-        </section>
-        
-
-        <div id="missions-container" class="missions-container">
-        </div>
-    </main>
-
-    <div id="Content" class="footer-bg"></div>
 </body>
 
 </html>
