--- a/v2/login.html
+++ b/v2/login.html
@@ -3,60 +3,38 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login - My Cars</title>
+<title>Login - Cars Admin</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
-  body {
-    background: url('https://img.freepik.com/free-photo/view-starry-night-sky-with-nature-mountains-landscape_23-2151614765.jpg?semt=ais_hybrid&w=740&q=80') no-repeat center center fixed;
-    background-size: cover;
-    font-family: 'Arial', sans-serif;
-  }
-  .glass-card {
-    backdrop-filter: blur(15px);
-    background: rgba(255,255,255,0.1);
-    border-radius: 1rem;
-    padding: 2rem;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
-  }
-  .btn-primary {
-    background-color: #3B82F6;
-  }
-  .btn-primary:hover {
-    background-color: #2563EB;
-  }
-  .btn-google {
-    background-color: #FFFFFF;
-    color: #000;
-    border: 1px solid #E5E7EB;
-  }
-  .btn-google:hover {
-    background-color: #F3F4F6;
-  }
+body {
+  background: url('https://static.vecteezy.com/system/resources/thumbnails/011/457/898/small_2x/flower-and-mountain-landscape-background-free-vector.jpg') no-repeat center center fixed;
+  background-size: cover;
+  font-family: 'Arial', sans-serif;
+}
+.glass-card {
+  backdrop-filter: blur(15px);
+  background: rgba(255,255,255,0.1);
+  border-radius: 1rem;
+  padding: 2rem;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+}
 </style>
 </head>
 <body class="flex items-center justify-center h-screen text-white">
 
 <div class="glass-card w-full max-w-md">
-  <h1 class="text-3xl font-semibold mb-6 text-center">Sign In</h1>
-
-  <div class="mb-4">
-    <input id="email" type="email" placeholder="Email" class="w-full mb-3 p-3 rounded text-black"/>
-    <input id="password" type="password" placeholder="Password" class="w-full mb-3 p-3 rounded text-black"/>
-    <button id="login-btn" class="w-full btn-primary px-4 py-3 rounded font-semibold text-white">Login</button>
-    <p id="login-error" class="text-red-400 mt-2"></p>
-  </div>
-
-  <div class="text-center my-4 text-gray-300">OR</div>
-
-  <button id="google-login" class="w-full btn-google px-4 py-3 rounded font-semibold flex items-center justify-center gap-2">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" class="w-6 h-6"/>
+  <h2 class="text-2xl font-semibold mb-6 text-center">Admin Login</h2>
+  <button id="google-login" class="w-full bg-blue-600 hover:bg-blue-500 px-4 py-2 rounded mb-4 flex items-center justify-center gap-2">
+    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" class="w-6 h-6"/>
     Sign in with Google
   </button>
+  <p id="error-msg" class="text-red-400 mt-2 text-center"></p>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
-import { getAuth, signInWithEmailAndPassword, signInWithPopup, GoogleAuthProvider, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-auth.js";
+import { getDatabase, ref, get } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-database.js";
+import { getAuth, signInWithPopup, GoogleAuthProvider, signOut } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-auth.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyDLhVsvxJlOvqKqEjXQUActO0Sf0S0hgLw",
@@ -70,25 +48,35 @@ const firebaseConfig = {
 };
 
 const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
 const auth = getAuth(app);
+const provider = new GoogleAuthProvider();
 
-document.getElementById('login-btn').addEventListener('click', () => {
-  const email = document.getElementById('email').value;
-  const password = document.getElementById('password').value;
-  signInWithEmailAndPassword(auth, email, password)
-    .then(() => window.location.href = 'admin.html')
-    .catch(err => document.getElementById('login-error').textContent = err.message);
-});
+const loginBtn = document.getElementById('google-login');
+const errorMsg = document.getElementById('error-msg');
 
-document.getElementById('google-login').addEventListener('click', () => {
-  const provider = new GoogleAuthProvider();
-  signInWithPopup(auth, provider)
-    .then(() => window.location.href = 'admin.html')
-    .catch(err => document.getElementById('login-error').textContent = err.message);
-});
+loginBtn.addEventListener('click', async () => {
+  errorMsg.textContent = '';
+  try {
+    const result = await signInWithPopup(auth, provider);
+    const user = result.user;
 
-onAuthStateChanged(auth, user => {
-  if(user) window.location.href = 'admin.html';
+    // Check allowed emails from Firebase
+    const snapshot = await get(ref(db, 'allowedEmails'));
+    const allowed = snapshot.val() || [];
+
+    if (!allowed.includes(user.email)) {
+      await signOut(auth);
+      errorMsg.textContent = "This email is not allowed.";
+      return;
+    }
+
+    // Redirect if allowed
+    window.location.href = 'admin.html';
+
+  } catch (error) {
+    errorMsg.textContent = error.message;
+  }
 });
 </script>
 
