--- a/v2/login.html
+++ b/v2/login.html
@@ -24,17 +24,15 @@ body {
 
 <div class="glass-card w-full max-w-md">
   <h2 class="text-2xl font-semibold mb-6 text-center">Admin Login</h2>
-  <button id="google-login" class="w-full bg-blue-600 hover:bg-blue-500 px-4 py-2 rounded mb-4 flex items-center justify-center gap-2">
-    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" class="w-6 h-6"/>
-    Sign in with Google
-  </button>
+  <input id="email" type="email" placeholder="Email" class="w-full mb-4 p-2 rounded text-black"/>
+  <input id="password" type="password" placeholder="Password" class="w-full mb-4 p-2 rounded text-black"/>
+  <button id="login-btn" class="w-full bg-blue-600 hover:bg-blue-500 px-4 py-2 rounded">Login</button>
   <p id="error-msg" class="text-red-400 mt-2 text-center"></p>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
-import { getDatabase, ref, get } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-database.js";
-import { getAuth, signInWithPopup, GoogleAuthProvider, signOut } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-auth.js";
+import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-auth.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyDLhVsvxJlOvqKqEjXQUActO0Sf0S0hgLw",
@@ -48,37 +46,30 @@ const firebaseConfig = {
 };
 
 const app = initializeApp(firebaseConfig);
-const db = getDatabase(app);
 const auth = getAuth(app);
-const provider = new GoogleAuthProvider();
 
-const loginBtn = document.getElementById('google-login');
+const loginBtn = document.getElementById('login-btn');
 const errorMsg = document.getElementById('error-msg');
 
 loginBtn.addEventListener('click', async () => {
   errorMsg.textContent = '';
+  const email = document.getElementById('email').value;
+  const password = document.getElementById('password').value;
+
   try {
-    const result = await signInWithPopup(auth, provider);
-    const user = result.user;
-
-    // Check allowed emails from Firebase
-    const snapshot = await get(ref(db, 'allowedEmails'));
-    const allowed = snapshot.val() || [];
-
-    if (!allowed.includes(user.email)) {
-      await signOut(auth);
-      errorMsg.textContent = "This email is not allowed.";
-      return;
-    }
-
-    // Redirect if allowed
+    await signInWithEmailAndPassword(auth, email, password);
     window.location.href = 'admin.html';
-
   } catch (error) {
     errorMsg.textContent = error.message;
   }
+});
+
+// Optional: redirect if already logged in
+onAuthStateChanged(auth, user => {
+  if (user) window.location.href = 'admin.html';
 });
 </script>
 
 </body>
 </html>
+<!DOCTYPE html>
