--- a/website/home/index.html
+++ b/website/home/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="oR7TSqcvFR2p3NwBfh3XHsn2D3_lKclZzcbnEZlAgvk" />
   <title>Allied Algorithms</title>
 
   <!-- Tailwind CSS -->
