--- a/website/aac/index.html
+++ b/website/aac/index.html
@@ -8,7 +8,7 @@
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- jQuery (required for .load() to work) -->
+  <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <!-- Google Analytics -->
@@ -16,14 +16,14 @@
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){ dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-MG0KYH98NN');
+    gtag("js", new Date());
+    gtag("config", "G-MG0KYH98NN");
   </script>
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="../images/logo.png" />
 
-  <!-- Navbar & Footer Loader -->
+  <!-- Navbar/Footer Loader -->
   <script>
     $(function () {
       $("#navbar").load("../layout/navbar.html");
@@ -31,7 +31,6 @@
     });
   </script>
 
-  <!-- Page Style -->
   <style>
     body {
       font-family: "Inter", system-ui, sans-serif;
@@ -41,75 +40,107 @@
 </head>
 
 <body class="flex flex-col items-center justify-center min-h-screen text-center px-6">
+  
   <!-- Navbar -->
   <div id="navbar" class="w-full"></div>
 
-<!-- Team & Email Form -->
+  <!-- Main Content -->
+  <main class="max-w-2xl mt-10">
+    <h1 class="text-4xl sm:text-5xl font-bold text-white mb-6 mt-40">
+      Download Allied AutoCorrection
+    </h1>
 
-<main class="max-w-2xl mt-10">
-  <h1 class="text-4xl sm:text-5xl font-bold text-white mb-6 mt-40">
-    Download Allied AutoCorrection
-  </h1>
+    <p class="text-slate-300 text-lg leading-relaxed mb-8">
+      Allied AutoCorrection is a powerful and precise function for all FLL teams...
+    </p>
 
-  <p class="text-slate-300 text-lg leading-relaxed mb-8">
-    Allied AutoCorrection is a powerful and precise function for all FLL teams...
-  </p>
+    <!-- Form -->
+    <div class="flex flex-col gap-4 mb-6">
+      <input type="text" id="teamNumber" placeholder="Team #"
+             class="p-3 rounded-lg border border-slate-500 bg-slate-700 text-white focus:outline-none focus:ring-2 focus:ring-blue-500">
 
-  <!-- Form Fields -->
+      <input type="email" id="email" placeholder="Email"
+             class="p-3 rounded-lg border border-slate-500 bg-slate-700 text-white focus:outline-none focus:ring-2 focus:ring-blue-500">
+    </div>
 
-  <div class="flex flex-col gap-4 mb-6">
-    <input type="text" id="teamNumber" placeholder="Team #" 
-           class="p-3 rounded-lg border border-slate-500 bg-slate-700 text-white focus:outline-none focus:ring-2 focus:ring-blue-500">
-    <input type="email" id="email" placeholder="Email" 
-           class="p-3 rounded-lg border border-slate-500 bg-slate-700 text-white focus:outline-none focus:ring-2 focus:ring-blue-500">
-  </div>
+    <!-- Download Button -->
+    <button id="downloadBtn"
+            class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold text-lg px-6 py-3 rounded-lg shadow-md transition-all duration-200">
+      ⬇️ Download AutoCorrection.llsp3
+    </button>
 
-  <!-- Download Button -->
+    <p id="status" class="text-slate-400 mt-2 text-sm"></p>
+  </main>
 
-<button id="downloadBtn"
-       class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold text-lg px-6 py-3 rounded-lg shadow-md transition-all duration-200">
-⬇️ Download AutoCorrection.llsp3 </button>
+  <!-- Footer -->
+  <div id="footer"></div>
 
-  <p id="status" class="text-slate-400 mt-2 text-sm"></p>
-</main>
+  <!-- Discord Webhook Script -->
+  <script>
+    const DISCORD_WEBHOOK_URL =
+      "https://discord.com/api/webhooks/1377087321203150941/iK28JWFiXjPouGOpEVnvhExkIqPdp8H7P7HT5oSJHdpPFOgMsOde9s8fD-xSnyl_MNbQ";
 
-<script>
-  const downloadBtn = document.getElementById("downloadBtn");
-  const status = document.getElementById("status");
+    const downloadBtn = document.getElementById("downloadBtn");
+    const status = document.getElementById("status");
 
-  downloadBtn.addEventListener("click", () => {
-    const teamNumber = document.getElementById("teamNumber").value.trim();
-    const email = document.getElementById("email").value.trim();
+    downloadBtn.addEventListener("click", async () => {
+      const teamNumber = document.getElementById("teamNumber").value.trim();
+      const email = document.getElementById("email").value.trim();
 
-    if (!teamNumber || !email) {
-      status.textContent = "Please fill in both Team # and Email to download.";
-      status.className = "text-red-400 mt-2 text-sm";
-      return;
-    }
+      if (!teamNumber || !email) {
+        status.textContent = "Please fill in both Team # and Email to download.";
+        status.className = "text-red-400 mt-2 text-sm";
+        return;
+      }
 
-    // Send Google Analytics event
-    if (typeof gtag === "function") {
-      gtag('event', 'download_click', { 
-        event_category: 'Downloads', 
-        event_label: 'AutoCorrection.llsp3', 
-        value: 1 
-      });
-    }
+      status.textContent = "Sending request...";
+      status.className = "text-yellow-400 mt-2 text-sm";
 
-    // Trigger download
-    const link = document.createElement("a");
-    link.href = "AutoCorrection.llsp3";
-    link.download = "AutoCorrection.llsp3";
-    document.body.appendChild(link);
-    link.click();
-    document.body.removeChild(link);
+      const payload = {
+        embeds: [
+          {
+            title: "📥 AutoCorrection Download",
+            color: 5814783,
+            fields: [
+              { name: "Team #", value: teamNumber, inline: true },
+              { name: "Email", value: email, inline: true }
+            ],
+            timestamp: new Date().toISOString()
+          }
+        ]
+      };
 
-    status.textContent = "Download started!";
-    status.className = "text-green-400 mt-2 text-sm";
-  });
-</script>
+      try {
+        await fetch(DISCORD_WEBHOOK_URL, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(payload)
+        });
+      } catch (error) {
+        console.error("Webhook Error:", error);
+      }
 
+      // Analytics event
+      if (typeof gtag === "function") {
+        gtag("event", "download_click", {
+          event_category: "Downloads",
+          event_label: "AutoCorrection.llsp3",
+          value: 1
+        });
+      }
+
+      // Start File Download
+      const link = document.createElement("a");
+      link.href = "AutoCorrection.llsp3";
+      link.download = "AutoCorrection.llsp3";
+      document.body.appendChild(link);
+      link.click();
+      link.remove();
+
+      status.textContent = "Download started!";
+      status.className = "text-green-400 mt-2 text-sm";
+    });
+  </script>
 
 </body>
 </html>
-
